--- a/reports.html
+++ b/reports.html
@@ -4,60 +4,34 @@
   <meta charset="UTF-8">
   <title>Reports</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-
-  <style>
-    body { display: flex; height: 100vh; overflow: hidden; font-family: Arial, sans-serif; }
-    .sidebar { width: 250px; background: #f8f9fa; padding: 20px; }
-    .content { flex: 1; display: flex; flex-direction: column; }
-    .topbar { background: #ffffff; padding: 10px 20px; border-bottom: 1px solid #ddd; display: flex; justify-content: space-between; align-items: center; }
-    .main { flex: 1; padding: 20px; overflow-y: auto; }
-    h1 { font-weight: bold; }
-  </style>
 </head>
-<body>
-  <!-- Sidebar -->
-  <div class="sidebar">
-    <h5>Insurance Claims</h5>
-    <ul class="nav flex-column">
-      <li class="nav-item"><a class="nav-link" href="index.html">📊 Dashboard</a></li>
-      <li class="nav-item"><a class="nav-link" href="index.html">📝 New Claim</a></li>
-      <li class="nav-item"><a class="nav-link" href="claims.html">📂 Claims</a></li>
-      <li class="nav-item"><a class="nav-link active" href="reports.html">📑 Reports</a></li>
+<body class="p-4">
+  <div class="container">
+    <h1 class="mb-4">📑 Reports</h1>
+
+    <ul class="list-group">
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        Total Claims
+        <span class="badge bg-primary rounded-pill">{{ summary.total }}</span>
+      </li>
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        Pending
+        <span class="badge bg-warning text-dark rounded-pill">{{ summary.pending }}</span>
+      </li>
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        Approved
+        <span class="badge bg-success rounded-pill">{{ summary.approved }}</span>
+      </li>
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        Rejected
+        <span class="badge bg-danger rounded-pill">{{ summary.rejected }}</span>
+      </li>
     </ul>
-  </div>
 
-  <!-- Content -->
-  <div class="content">
-    <div class="topbar">
-      <h1 class="mb-0">Reports</h1>
-    </div>
-
-    <div class="main">
-      <h4>Claim Summary</h4>
-      <ul id="summaryList"></ul>
+    <div class="mt-4">
+      <a href="{{ url_for('dashboard') }}" class="btn btn-secondary">⬅ Back to Dashboard</a>
+      <a href="{{ url_for('claims') }}" class="btn btn-primary">📂 View Claims</a>
     </div>
   </div>
-
-  <script>
-    function loadReports() {
-      let claims = JSON.parse(localStorage.getItem("claims")) || [];
-      let summary = {
-        total: claims.length,
-        pending: claims.filter(c => c.status === "Pending").length,
-        approved: claims.filter(c => c.status === "Approved").length,
-        rejected: claims.filter(c => c.status === "Rejected").length,
-      };
-
-      let summaryList = document.getElementById("summaryList");
-      summaryList.innerHTML = `
-        <li>Total Claims: ${summary.total}</li>
-        <li>Approved: ${summary.approved}</li>
-        <li>Pending: ${summary.pending}</li>
-        <li>Rejected: ${summary.rejected}</li>
-      `;
-    }
-    window.onload = loadReports;
-  </script>
 </body>
 </html>
